fix picasso overflow

--- a/print/assets/calendar/CalendarDaily.sass
+++ b/print/assets/calendar/CalendarDaily.sass
@@ -2,6 +2,7 @@
 
 // Theme
 .theme--light.v-calendar-daily
+
   background-color: $calendar-background-color
   border-left: $calendar-line-color $calendar-line-width solid
   border-top: $calendar-line-color $calendar-line-width solid
@@ -46,7 +47,6 @@
   display: flex
   flex-direction: column
   overflow: hidden
-  height: 100%
 
 .v-calendar-daily__head
   flex: none
